2005-07-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot.doc: Fix typos.

2005-07-10  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c (do_system_func) src/command.h src/eval.c
	src/internal.c (f_system) src/internal.h src/scanner.c (substitute):
	New built-in string function system("command") which executes a shell
	command and returns the resulting output stream as a string variable.
	Consolidate this code with existing shell escape code (backticks) via
	a new routine do_system_func().

	* docs/gnuplot.doc: Document new system("command") function.

2005-07-09  Juergen Wieferink  <wieferink@freenet.de>

	* src/eval.c src/eval.h src/parse.c src/parse.h: Consolidate code
	in add_udv() and add_udv_by_name(). Move add_udv_by_name() from parse.c
	to eval.c so that lower level routines in internal.c and eval.c do not
	have to include parse.h.

2005-07-08  Juergen Wieferink  <wieferink@freenet.de>

	* src/internal.c (f_call f_calln): Free all strings used as dummy
	variables; fixes memory leak.

	* src/eval.h src/eval.c: New function free_at() that frees all strings
	stored in an old action table so that there is no memory leak when the
	table is re-used.

	* src/command.c (define): Free old action table if a function is 
	redefined; fixes memory leak.

	* src/parse.c (temp_at parse_primary_expression): Recode to use new
	free_at() routine.
	
2005-07-08  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/internal.c (f_range f_strstrt) 
	src/parse.c (parse_primary_expression):
	
	Switch convention of substring indexing from C-like (first character has
	index 0) to Fortran-like (first character has index 1).  This makes the
	routines strstrt() and word() consistent with each other, and makes the
	range specifier form string[beg:end] consistent with both of them.

	* demo/stringvar.dem: Expand demo to illustrate use of the substring
	operator and the various string string functions.
	